--- a/recipes/Templates/recipes/home.html
+++ b/recipes/Templates/recipes/home.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Recipe App</title>
+    <title>Welcome To My Recipe App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% load static %}
+    <link rel="shortcut icon" href="{% static 'recipes/images/dough.png' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/styles.css' %}" />
+    <style type="text/css">
+        body {
+            background: url("{% static 'recipes/images/dough.jpg' %}") no-repeat fixed;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        img {
+            border-radius: 15px;
+        }
+
+        .main-page-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #2c2c2c;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to the Recipe App!</h1>
+    <img src="{% static 'recipes/images/welcome.png' %}" />
 </body>
+
 </html>
