--- a/recipes/Templates/recipes/main.html
+++ b/recipes/Templates/recipes/main.html
@@ -62,10 +62,25 @@
             color: #545454;
             transition: 200ms;
         }
+
+        .nav-bar {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .logout_btn {
+            margin-right: 20px;
+            margin-left: 10px;
+            border-radius: 5px;
+            color: #000;
+        }
     </style>
 </head>
 
 <body>
+    <div class="nav-bar">
+        <a href="{%url 'logout' %}" class="logout_btn"> Logout</a>
+    </div>
     <header>
         <img class="logo" src="{% static 'recipes/images/recipes.png' %}" alt="Recipes Logo">
     </header>
