--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -135,3 +135,59 @@ img {
     transition: 200ms;
 }
 
+.auth_modal {
+    width: 25%;
+    background-color: rgba(255, 255, 255, 0.9);  
+    border-radius: 10px;
+    padding: 25px;
+    box-shadow: 5px 10px 15px #537580;  
+    margin: 10px auto;
+    margin-top: 23vh;
+    font-family: 'Roboto Mono', 'Calibri', 'Trebuchet MS', sans-serif;
+    font-variant: small-caps;
+}
+
+#error_login {
+    margin: 0 auto;
+    border: 3px solid #537580;  
+    background-color: rgba(255, 255, 255, 0.9);  
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.form_input {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.nav-bar {
+    width: 80vw;
+    height: 10vh;
+    margin: 0 auto;
+    margin-bottom: 0px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.9);  
+    display: flex;
+    justify-content: space-between;
+    justify-content: space-around;
+    align-items: right;
+}
+
+.logout_btn {
+    width: 70px;
+    font-family: "Roboto Mono", "Calibri", "Trebuchet MS", sans-serif;
+    font-variant: small-caps;
+    font-size: 16px;
+    background-color: #537580; 
+    border-radius: 5px;
+    color: #fff;  
+    text-decoration: none;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    bottom: 25px;
+    right: 25px;
+    height: 25px;
+    margin-top: 15px;
+}
