--- a/recipes/Templates/recipes/welcome.html
+++ b/recipes/Templates/recipes/welcome.html
@@ -19,7 +19,7 @@
             margin: 0;
         }
 
-        img {
+        .welcome-img {
             border-radius: 15px;
             margin-top: 20px;
         }
@@ -44,7 +44,6 @@
             padding: 10px; 
             background-color: rgba(255, 255, 255, 0.5); 
         }
-
 
         .login_btn {
             margin-right: 20px;
