--- a/recipes/Templates/recipes/detail.html
+++ b/recipes/Templates/recipes/detail.html
@@ -48,19 +48,23 @@
 
         .nav-bar {
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            padding: 10px;
+            padding: 10px 30px;
+            margin-left: -20px; 
+            margin-right: -20px; 
             position: fixed;
             top: 0;
-            right: 0;
+            left: 0;
             width: 100%;
+            height: 85px;
             background-color: rgba(255, 255, 255, 0.5);
+            z-index: 2;
         }
 
         .logout_btn {
             margin-left: auto;
-            margin-right: 20px;
+            margin-right: 20px; 
+            margin-top: 15px;
             border-radius: 5px;
             color: #ffffff;
         }
@@ -92,12 +96,12 @@
             <div class="details_short">
                 <b>Name: </b> {{object.name}} <br>
                 <b>Cooking Time: </b> {{object.cooking_time}} <br>
-                <b>Difficulty: </b> {{object.difficulty}} <br>
+                <b>Difficulty: </b> {{object.calculate_difficulty}} <br>
                 <b>Ingredients: </b> {{object.ingredients}} <br><br>
             </div>
             <div class="details_long">
-                <a href="javascript:history.back()" class="back_btn">Back</a>
-            </div>
+                <a href="javascript:history.back()" class="back_btn">List</a>
+            </div>            
         </div>
     </div>
 </body>
