--- a/recipes/Templates/recipes/search.html
+++ b/recipes/Templates/recipes/search.html
@@ -1,171 +1,172 @@
-<!DOCTYPE html>
+<!doctype html>
 
 {% load static %}
 
 <html lang="en">
-
-<head>
+  <head>
     <title>Recipes | Search</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="{% static 'recipes/images/your-favicon.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/styles.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="{% static 'recipes/images/your-favicon.png' %}"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'recipes/css/styles.css' %}"
+    />
     <style type="text/css">
-        body {
-            background: url("{% static 'recipes/images/dough.jpg' %}") no-repeat fixed;
-            background-size: cover;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-family: 'Roboto Mono', 'Calibri', 'Trebuchet MS', sans-serif;
-            font-variant: small-caps;
-            margin: 0;
-        }
+      body {
+        background: url("{% static 'recipes/images/dough.jpg' %}") no-repeat
+          fixed;
+        background-size: cover;
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: "Roboto Mono", "Calibri", "Trebuchet MS", sans-serif;
+        font-variant: small-caps;
+        margin: 0;
+      }
 
-        .nav-bar {
-            display: flex;
-            justify-content: flex-end;
-            padding: 10px 0px;
-            background-color: rgba(255, 255, 255, 0.5);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 2;
-            border-radius: 0;
-            height: 85px;
-        }
+      .nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        padding: 10px 0px;
+        background-color: rgba(255, 255, 255, 0.5);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+        border-radius: 0;
+        height: 85px;
+      }
 
-        .nav-bar a {
-            color: #ffffff;
-            margin-right: 20px;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 5px;
-            padding: 10px 20px;
-            background-color: #2c2c2c;
-        }
+      .nav-bar a {
+        color: #ffffff;
+        margin-right: 20px;
+        text-decoration: none;
+        font-size: 18px;
+        border-radius: 5px;
+        padding: 10px 20px;
+        background-color: #2c2c2c;
+      }
 
-        .content-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 150px;
-            width: 80%; 
-        }
+      .content-container {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 150px;
+        width: 80%;
+      }
 
-        .form_data {
-            background-color: rgba(44, 44, 44, 0.8);
-            border-radius: 10px;
-            padding: 20px;
-            color: #ffffff;
-            box-shadow: 5px 10px 15px #f7b4a7;
-            width: 35%; 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+      .form_data {
+        background-color: rgba(44, 44, 44, 0.8);
+        border-radius: 10px;
+        padding: 20px;
+        color: #ffffff;
+        box-shadow: 5px 10px 15px #f7b4a7;
+        width: 35%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 20px;
+      }
 
-        h1 {
-            font-size: 45px;
-            margin-bottom: 10px;
-        }
+      h1 {
+        font-size: 45px;
+        margin-bottom: 10px;
+      }
 
-        .login_btn,
-        .search_btn,
-        .back_btn {
-            background-color: #2c2c2c;
-            color: #ffffff;
-            font-size: 18px;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background-color 0.3s ease;
-        }
+      .login_btn,
+      .search_btn,
+      .back_btn {
+        background-color: #2c2c2c;
+        color: #ffffff;
+        font-size: 18px;
+        padding: 10px 20px;
+        border-radius: 5px;
+        text-decoration: none;
+        cursor: pointer;
+        margin-top: 10px;
+        transition: background-color 0.3s ease;
+      }
 
-        .login_btn:hover,
-        .search_btn:hover,
-        .back_btn:hover {
-            background-color: #1a1a1a;
-        }
+      .login_btn:hover,
+      .search_btn:hover,
+      .back_btn:hover {
+        background-color: #1a1a1a;
+      }
 
-        .dropdown {
-            width: 100%;
-        }
+      .dropdown {
+        width: 100%;
+      }
 
-        .dropdown select {
-            width: 80%; 
-            padding: 10px;
-            margin-bottom: 10px;
-        }
+      .dropdown select {
+        width: 80%;
+        padding: 10px;
+        margin-bottom: 10px;
+      }
 
-        .chart-container {
-            margin-top: 60px;
-            margin-bottom: 5px; 
-            width: 80%; 
-        }
+      .chart-container {
+        margin-top: 60px;
+        margin-bottom: 5px;
+        width: 80%;
+      }
 
-        .result-container {
-            width: 60%; 
-            text-align: center;
-        }
+      .result-container {
+        width: 60%;
+        text-align: center;
+      }
 
-        .form_data {
-            background-color: rgba(44, 44, 44, 0.8);
-            border-radius: 10px;
-            padding: 20px;
-            color: #ffffff;
-            box-shadow: 5px 10px 15px #f7b4a7;
-            width: 35%;
-            max-height: 400px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-bottom: 20px;
-            height: fit-content; 
-        }
-
+      .form_data {
+        background-color: rgba(44, 44, 44, 0.8);
+        border-radius: 10px;
+        padding: 20px;
+        color: #ffffff;
+        box-shadow: 5px 10px 15px #f7b4a7;
+        width: 35%;
+        max-height: 400px;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 20px;
+        height: fit-content;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav-bar">
-        <a href="{% url 'recipes:list' %}" class="login_btn">Recipes</a>
-        <a href="{% url 'logout' %}" class="login_btn">Logout</a>
+      <a href="{% url 'recipes:list' %}" class="login_btn">Recipes</a>
+      <a href="{% url 'logout' %}" class="login_btn">Logout</a>
     </div>
     <div class="content-container">
-        <form action="" method="POST" class="form_data">
-            <h1>Search Recipes</h1>
-            {% csrf_token %}
+      <form action="" method="POST" class="form_data">
+        <h1>Search Recipes</h1>
+        {% csrf_token %}
 
-            <div class="dropdown">
-                {{ form }}
-            </div>
+        <div class="dropdown">{{ form }}</div>
 
-            <button type="submit" class="search_btn">Search</button>
-        </form>
+        <button type="submit" class="search_btn">Search</button>
+      </form>
 
-        <div class="result-container">
-            {% if recipe_df %}
-                <h3>Recipes with difficulty: {{ recipe_diff }}</h3>
-                {{ recipe_df|safe }}
-                {% if chart %}
-                    <div class="chart-container">
-                        <img alt="chart" src="data:image/png;base64, {{ chart|safe }}">
-                    </div>
-                {% endif %}
-            {% else %}
-                <h3>No recipes found for difficulty: {{ recipe_diff }}</h3>
-            {% endif %}
-            <br>
-            <a href="javascript:history.back()" class="back_btn">Back</a>
+      <div class="result-container">
+        {% if recipe_df %}
+        <h3>Recipes with difficulty: {{ recipe_diff }}</h3>
+        {{ recipe_df|safe }} {% if chart %}
+        <div class="chart-container">
+          <img alt="chart" src="data:image/png;base64, {{ chart|safe }}" />
         </div>
+        {% endif %} {% else %}
+        <h3>No recipes found for difficulty: {{ recipe_diff }}</h3>
+        {% endif %}
+        <br />
+        <a href="javascript:history.back()" class="back_btn">Back</a>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
