--- a/recipes/Templates/recipes/welcome.html
+++ b/recipes/Templates/recipes/welcome.html
@@ -1,67 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Welcome To My Recipe App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% load static %}
     <link rel="shortcut icon" href="{% static 'recipes/images/dough.png' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/styles.css' %}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'recipes/css/styles.css' %}"
+    />
     <style type="text/css">
-        body {
-            background: url("{% static 'recipes/images/dough.jpg' %}") no-repeat fixed;
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
+      body {
+        background: url("{% static 'recipes/images/dough.jpg' %}") no-repeat
+          fixed;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+      }
 
-        .welcome-img {
-            border-radius: 15px;
-            margin-top: 20px;
-        }
+      .welcome-img {
+        border-radius: 15px;
+        margin-top: 20px;
+      }
 
-        .main-page-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #2c2c2c;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 18px;
-        }
+      .main-page-btn {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #2c2c2c;
+        color: #ffffff;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 18px;
+      }
 
-        .nav-bar {
-            display: flex;
-            justify-content: flex-end;
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 100%;
-            padding: 10px; 
-            background-color: rgba(255, 255, 255, 0.5); 
-        }
+      .nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        padding: 10px;
+        background-color: rgba(255, 255, 255, 0.5);
+      }
 
-        .login_btn {
-            margin-right: 20px;
-            margin-left: 10px;
-            border-radius: 5px;
-            color: #000;
-            margin-top: 20px;
-            margin-bottom: 80px;
-            height: 25px;
-        }
+      .login_btn {
+        margin-right: 20px;
+        margin-left: 10px;
+        border-radius: 5px;
+        color: #000;
+        margin-top: 20px;
+        margin-bottom: 80px;
+        height: 25px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav-bar">
-        <a href="{% url 'login' %}" class="login_btn"> Login</a>
+      <a href="{% url 'login' %}" class="login_btn"> Login</a>
     </div>
-    <img class="welcome-img" src="{% static 'recipes/images/welcome.png' %}" alt="Welcome Image" />
-</body>
-
+    <img
+      class="welcome-img"
+      src="{% static 'recipes/images/welcome.png' %}"
+      alt="Welcome Image"
+    />
+  </body>
 </html>
