--- a/recipes/Templates/recipes/list.html
+++ b/recipes/Templates/recipes/list.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Recipes</title>
@@ -58,14 +58,24 @@
       }
 
       .recipe_grid {
-        margin-top: 150px;
+        margin-top: 550px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         position: relative;
         z-index: 1;
       }
 
       .grid_item {
+        margin: 10px;
+        flex: 0 0 calc(33.33% - 20px); /* 33.33% for three items in a row with margins */
+        max-width: calc(33.33% - 20px);
         position: relative;
         z-index: 1;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 10px;
+        border-radius: 5px;
+        text-align: center;
       }
 
       .search_btn,
@@ -85,6 +95,33 @@
         background-color: #545454;
         transition: 200ms;
       }
+
+      .about_me_btn {
+        margin-left: 10px;
+        border-radius: 5px;
+        color: #ffffff;
+        font-size: 20px;
+        padding: 15px 25px;
+        background-color: #2c2c2c;
+        text-decoration: none;
+        margin-top: 10px;
+        display: inline-block;
+        line-height: 1.5;
+      }
+
+      .list_btn,
+      .logout_btn,
+      .search_btn,
+      .about_me_btn {
+        font-size: 18px;
+        padding: 10px 20px;
+        background-color: #2c2c2c;
+        color: #ffffff;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 20px;
+        margin-left: 20px;
+      }
     </style>
   </head>
 
@@ -101,6 +138,7 @@
           <button type="submit" class="search_btn">Search</button>
         </form>
         <a href="{%url 'logout' %}" class="logout_btn"> Logout</a>
+        <a href="{% url 'recipes:about_me' %}" class="about_me_btn">About Me</a>
       </div>
     </div>
 
@@ -116,9 +154,9 @@
       {% for object in object_list %}
       <div class="grid_item">
         <h4>
-          <a class="recipe_name" href="{{object.get_absolute_url}}">
-            {{object.name}}
-          </a>
+          <a class="recipe_name" href="{{object.get_absolute_url}}"
+            >{{object.name}}</a
+          >
         </h4>
       </div>
       {% endfor %}
