--- a/recipes/Templates/recipes/search.html
+++ b/recipes/Templates/recipes/search.html
@@ -65,7 +65,7 @@
         border-radius: 10px;
         padding: 20px;
         color: #ffffff;
-        box-shadow: 5px 10px 15px #f7b4a7;
+        box-shadow: 5px 10px 15px black;
         width: 35%;
         display: flex;
         flex-direction: column;
@@ -125,7 +125,7 @@
         border-radius: 10px;
         padding: 20px;
         color: #ffffff;
-        box-shadow: 5px 10px 15px #f7b4a7;
+        box-shadow: 5px 10px 15px black;
         width: 35%;
         max-height: 400px;
         overflow-y: auto;
